[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Slavuan"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.4.2"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:even"
brain-calc = "brain_games.scripts.brain_calc:calc"
brain-gcd = "brain_games.scripts.brain_gcd:gcd"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
